--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,94 @@
-body {
-    background-color: black;
+body{
+    margin: 0;
+    background-color: rgb(186, 159, 7);
 }
 
-#navbar {
-    position: fixed;
-    top: 0;
-
-}
 
 section {
     height: 100vh;
     width: 100vw;
 }
-@media screen(max-width: 500px;) {
+
+#welcome-section{
+    display: flex;
+    background-color: black;
+    color: azure;
+    margin-top: 7%;
+    justify-content: center;
+    align-items: center;
+}
+
+#projects {
+    background-color: rgb(7, 44, 7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#title {
+    position: relative;
+    top: 10%;
+}
+
+
+#navbar {
+    display: flex;
+    position: fixed;
+    top: 0;
+    background-color: rgb(6, 125, 229);
+    width: 100vw;
+    height: 10%;
+    justify-content: space-around;
+    gap: 8px;
+    z-index: 1;
+    
+
+}
+
+.nav-link {
+    padding: 3px;
+    margin: 3px;
+}
+
+#tile-container{
+    display: grid;
+    background-color: rgb(121, 133, 129);
+    width: 80%;
+    height: 80%;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+   
+}
+    
+
+/* holds the project itself */
+.project-tile {
+   width: 50%;
+   height: 50%;
+   background-color: aqua;
+   justify-content: center;
+   align-items: center;
+}
+
+figure {
+    object-fit: contain;
+}
+
+img {
+   width: 250px;
+   height: 250px
+}
+
+@media screen and (max-width: 420px) {
     body{
         background-color: darkmagenta;
        
+    }
+    #navbar{
+        height:40%;
+        justify-content: center;
     }
    
 }
