--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
     margin: 0;
-    background-color: rgb(186, 159, 7);
+    overflow-x: hidden;
 }
 
 
@@ -9,17 +9,21 @@ section {
     width: 100vw;
 }
 
+/* h1{
+    position: fixed; */
+/* } */
+
 #welcome-section{
     display: flex;
     background-color: black;
-    color: azure;
-    margin-top: 7%;
+    color: rgb(53, 108, 108);
+    /* margin-top: 7%; */
     justify-content: center;
     align-items: center;
 }
 
 #projects {
-    background-color: rgb(7, 44, 7);
+    background-color: rgb(26, 153, 153);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,7 +39,7 @@ section {
     display: flex;
     position: fixed;
     top: 0;
-    background-color: rgb(6, 125, 229);
+    background-color: rgb(53, 108, 108);
     width: 100vw;
     height: 10%;
     justify-content: space-around;
@@ -50,40 +54,81 @@ section {
     margin: 3px;
 }
 
+a {
+    color: black;
+}
+
+a:hover{
+    color: whitesmoke;
+    text-decoration: none;
+}
+
+
+   
+
+
+/* holds the project itself */
+.project-tile {
+    width: 80%;
+    height: 80%;
+    background-color: goldenrod;
+    justify-self: center;
+    align-self: center;
+    text-align: center;
+}
+
 #tile-container{
     display: grid;
-    background-color: rgb(121, 133, 129);
+    background-color:rgb(2, 28, 28);
     width: 80%;
     height: 80%;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     justify-content: center;
     align-items: center;
-   
-}
     
-
-/* holds the project itself */
-.project-tile {
-   width: 50%;
-   height: 50%;
-   background-color: aqua;
-   justify-content: center;
-   align-items: center;
-}
-
-figure {
-    object-fit: contain;
+   
 }
 
 img {
-   width: 250px;
-   height: 250px
+   width: 200px;
+   height: 170px; 
+   
+   
+}
+
+#contact {
+    display: flex;
+    background-color: rgb(0, 0, 0);
+    color:rgb(53, 108, 108);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 2rem;
+}
+
+.quote {
+    text-align: center;
+}
+
+.quote::before {
+    content: '"';
+}
+
+.quote::after {
+    content: ' "'
+}
+
+p {
+    text-align: center;
+}
+
+h4, .contact{ 
+    text-align: center;
+    font-size: 1rem;
 }
 
 @media screen and (max-width: 420px) {
     body{
-        background-color: darkmagenta;
+        background-color: rgb(139, 0, 37);
        
     }
     #navbar{
